# Video_Processing

./: CMakeLists.txt  README.md
lib/: .gitmodules  CMakeCache.txt
src/: load_frame.cpp  main.cpp
